fixed gallery page description alignment

--- a/gallery.css
+++ b/gallery.css
@@ -564,7 +564,7 @@ main{
 @media screen and (max-width: 426px) {
     #gallery>h4{
         font-size: 0.8em;
-        left: 4em !important;
+        left: 2em !important;
     }
     #gallery{
         .popup-content{
